--- a/task-1/index.html
+++ b/task-1/index.html
@@ -15,6 +15,14 @@
 
 <body>
 
+    <!-- Welcome Screen -->
+    <div class="welcome-screen">
+        <div class="welcome-content">
+            <h1 class="welcome-title">The Experience</h1>
+            <button class="enter-btn">Enter</button>
+        </div>
+    </div>
+
     <div class="container">
         <!-- Section 1: Top Left -->
         <div class="section" id="section-1">
@@ -27,6 +35,7 @@
             <div class="content">
                 <h2>Vision</h2>
             </div>
+            <h1 class="clipped-text left-part">DEV</h1>
         </div>
 
         <!-- Section 2: Top Right -->
@@ -66,6 +75,7 @@
             <div class="content">
                 <h2>Future</h2>
             </div>
+            <h1 class="clipped-text right-part">LE</h1>
         </div>
 
         <div class="overlay-lines">
@@ -73,8 +83,14 @@
             <div class="line line-2"></div>
         </div>
 
-        <div class="center-text">
-            <h1>Developer</h1>
+        <!-- Navigation and Project Title -->
+        <div class="nav-left">
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <div class="project-text">Project</div>
         </div>
     </div>
 
